# fma_genre_classification

./: .gitignore  README.md  dt_grid_search.py  hgb_grid_search.py  lr_grid_search.py  main.py  pyproject.toml  rf_grid_search.py  svm.py  svm_grid_search.py  xgb_grid_search.py
fma/: __init__.py  data.py  eda.py  linear.py  plain.py  svm.py  types.py
fma/model/: __init__.py  best.py  dt.py  hgb.py  lr.py  rf.py  svm.py  utils.py  xgb.py
