[project]
name = "fma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "imbalanced-learn>=0.14.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pyarrow>=22.0.0",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "ipywidgets>=8.1.8",
    "ipykernel>=7.1.0",
    "iterative-stratification>=0.1.9",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "viztracer>=1.1.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.uv]
link-mode = "copy"
